<resources>
    <string name="app_name">Mobile Merchant</string>
    <string name="calculatorTitle">Calculator</string>
    <string name="debtOwedToYouTitle">Debt Owed To You</string>
    <string name="debtOwedToOthersTitle">Debt Owed To Others</string>
    <string name="CurrencyConverterTitle">Currency Converter</string>
    <string name="languageTitle">Language</string>
    <string-array name="languageChoices">
        <item>Default</item>
        <item>English</item>
        <item>Danish</item>
        <item>Hebrew</item>
    </string-array>
    <!-- Currency converter strings here-->
    <string name="currencyTo">To</string>
    <string name="currencyEditTextHint">Value here</string>
    <string name="currencyInputText">Input:</string>
    <string name="currencyResultText">Result:</string>
    <string name="currencyExchangeRateText">Exchange rate:</string>
    <string name="currencyConvertButtonText">Convert</string>
    <string name="currencySameCurrencyException">The two selected currencies cannot be the same.</string>
    <string name="currencyCurrencyNotSupportedException">One of the selected currencies is currently not allowed.</string>
    <string name="currencyNegativeInputException">Input value cannot be below 0.</string>
    <string name="currencyInputEmpty">Input is empty</string>
    <string-array name="currenciesAvailable">
        <item>DKK</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>SEK</item>
        <item>NOK</item>
        <item>JPY</item>
    </string-array>
    <!-- Debt owed strings here-->
    <string name="addNewPersonButtonText">ADD NEW PERSON</string>
    <string name="extraOptionText">Long click entries for extra options</string>
    <string name="searchFieldText">Search</string>
    <string name="debtOwedNoItems">No items</string>
    <!-- Create item & person dialog strings here-->
    <string name="valueTextHint">Value</string>
    <string name="nameTextHint">Name</string>
    <string name="confirmButtonText">CONFIRM</string>
    <string name="debtOwedMixedCurrencies">Mixed currencies</string>
    <!-- Calculator strings here-->
    <string name="calculatorNoNumber">No number</string>
    <string name="calculatorError">Error</string>


</resources>
