<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#838282"
    tools:context=".view.MainActivity">


    <TextView
        android:id="@+id/debtOthersText"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/radius"
        android:gravity="center"
        android:text="@string/debtOwedToOthersTitle"
        android:textStyle="bold"
        android:drawableStart="@drawable/debt_other_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"/>



            />

    <TextView
        android:id="@+id/debtYouTestText"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/radius"
        android:gravity="center"
        android:text="@string/debtOwedToYouTitle"
        android:textStyle="bold"
        android:drawableStart="@drawable/debt_you_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/debtOthersText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginRight="35dp"/>

    <TextView

        android:id="@+id/calculatorText"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/radius"
        android:gravity="center"
        android:text="@string/calculatorTitle"
        android:textStyle="bold"
        android:drawableStart="@drawable/calculator_icon"
        app:layout_constraintRight_toLeftOf="@id/currencyText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/debtOthersText"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/currencyText"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/radius"
        android:gravity="center"
        android:text="@string/CurrencyConverterTitle"
        android:textStyle="bold"
        android:drawableStart="@drawable/converter_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/calculatorText"
        app:layout_constraintTop_toBottomOf="@id/debtOthersText"
        android:layout_marginTop="30dp"
        android:layout_marginRight="35dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="182dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageText" />

    <TextView
        android:id="@+id/languageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languageTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorText"
        android:layout_marginTop="30dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>