<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/debt_owed_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#838282">

    <Button
        android:id="@+id/debt_owed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/addNewPersonButtonText"
        android:backgroundTint="@color/title_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
         />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/debt_recyclerView"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/debt_search_editText"
         />

    <EditText
        android:id="@+id/debt_search_editText"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_edittext_states"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/searchFieldText"
        android:textColorHint="@android:color/black"
        android:imeOptions="actionSearch"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounding_small"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/extraOptionText"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/debt_recyclerView"
         />

</androidx.constraintlayout.widget.ConstraintLayout>